--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -15,7 +15,7 @@
 
 % PDF specific document settings
 \hypersetup{pdftitle={GLFW Reference Manual}}
-\hypersetup{pdfauthor={Marcus Geelnard}}
+\hypersetup{pdfauthor={Camilla Berglund}}
 \hypersetup{pdfkeywords={GLFW,OpenGL,reference,manual}}
 
 
@@ -42,7 +42,7 @@
 This document is primarily a function reference manual for the \GLFW\ API.
 For a description of how to use \GLFW\ you should refer to the
 \textit{GLFW Users Guide}.
-\vspace{10cm}
+\vspace{5cm}
 
 \large
 Trademarks
@@ -1767,7 +1767,7 @@ This function is used for acquiring various properties of a joystick.
 \begin{refnotes}
 The joystick information is updated every time the function is called.
 
-No window has to be opened for joystick information to be valid.
+No window has to be opened for joystick information to be available.
 \end{refnotes}
 
 
@@ -1819,7 +1819,7 @@ joystick state to be updated.
 Use \textbf{glfwGetJoystickParam} to retrieve joystick capabilities, such
 as joystick availability and number of supported axes.
 
-No window has to be opened for joystick input to be valid.
+No window has to be opened for joystick input to be available.
 \end{refnotes}
 
 
@@ -1870,7 +1870,7 @@ joystick state to be updated.
 Use \textbf{glfwGetJoystickParam} to retrieve joystick capabilities, such
 as joystick availability and number of supported buttons.
 
-No window has to be opened for joystick input to be valid.
+No window has to be opened for joystick input to be available.
 \end{refnotes}
 
 
@@ -1904,8 +1904,7 @@ the number of seconds that have passed since \textbf{glfwInit} was called.
 
 \begin{refnotes}
 The resolution of the timer depends on which system the program is running
-on. The worst case resolution is somewhere in the order of $10~ms$, while
-for most systems the resolution should be better than $1~\mu s$.
+on.
 \end{refnotes}
 
 
@@ -2062,10 +2061,6 @@ to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
 
 Paletted images are translated into true color or true color + alpha pixel
 formats.
-
-Please note that \OpenGL~1.0 does not support single component alpha maps,
-so do not use images with Format = GL\_ALPHA directly as textures under
-\OpenGL~1.0.
 \end{refnotes}
 
 
@@ -2098,38 +2093,10 @@ Otherwise GL\_FALSE is returned.
 \end{refreturn}
 
 \begin{refdescription}
-This function reads an image from the memory buffer specified by the parameter
-\textit{data} and returns the image information and data in a GLFWimage
-structure, which has the following definition:
-
-\begin{lstlisting}
-typedef struct {
-    int Width, Height;    // Image dimensions
-    int Format;           // OpenGL pixel format
-    int BytesPerPixel;    // Number of bytes per pixel
-    unsigned char *Data;  // Pointer to pixel data
-} GLFWimage;
-\end{lstlisting}
-
-\textit{Width} and \textit{Height} give the dimensions of the image.
-\textit{Format} specifies an \OpenGL\ pixel format, which can be
-GL\_LUMINANCE or GL\_ALPHA (for gray scale images), GL\_RGB or GL\_RGBA.
-\textit{BytesPerPixel} specifies the number of bytes per pixel.
-\textit{Data} is a pointer to the actual pixel data.
-
-By default the read image is rescaled to the nearest larger $2^m\times2^n$
-resolution using bilinear interpolation, if necessary, which is useful if
-the image is to be used as an \OpenGL\ texture. This behavior can be
-disabled by setting the GLFW\_NO\_RESCALE\_BIT flag.
-
-Unless the flag GLFW\_ORIGIN\_UL\_BIT is set, the first pixel in
-\textit{img->Data} is the lower left corner of the image. If the flag
-GLFW\_ORIGIN\_UL\_BIT is set, however, the first pixel is the upper left
-corner.
-
-For single component images (i.e. gray scale), \textit{Format} is set
-to GL\_ALPHA if the flag GLFW\_ALPHA\_MAP\_BIT flag is set, otherwise
-\textit{Format} is set to GL\_LUMINANCE.
+This function reads an image file from the memory buffer specified by the
+parameter \textit{data} and returns the image information and data in a
+GLFWimage structure.  For more information on the \GLFW\ image struct, see
+\textbf{glfwReadImage}.
 \end{refdescription}
 
 \begin{refnotes}
@@ -2139,10 +2106,6 @@ format (.TGA). Supported pixel formats are: 8-bit gray scale, 8-bit paletted
 
 Paletted images are translated into true color or true color + alpha pixel
 formats.
-
-Please note that \OpenGL~1.0 does not support single component alpha maps,
-so do not use images with Format = GL\_ALPHA directly as textures under
-\OpenGL~1.0.
 \end{refnotes}
 
 
@@ -2168,8 +2131,8 @@ none
 \begin{refdescription}
 This function frees any memory occupied by a loaded image, and clears all
 the fields of the GLFWimage struct. Any image that has been loaded by the
-\textbf{glfwReadImage} function should be deallocated using this function,
-once the image is not needed anymore.
+\textbf{glfwReadImage} function should be deallocated using this function
+once the image is no longer needed.
 \end{refdescription}
 
 
@@ -2393,9 +2356,9 @@ component texture. The red, green and blue components are set to 1.0.
 \section{OpenGL Extension Support}
 One of the great features of \OpenGL\ is its support for extensions, which
 allow independent vendors to supply non-standard functionality in their
-\OpenGL\ implementations. Using extensions is different under different
-systems, which is why \GLFW\ has provided an operating system independent
-interface to querying and using \OpenGL\ extensions.
+\OpenGL\ implementations.  As the mechanism for querying extensions varies
+among systems, \GLFW\ provides an operating system independent interface for
+querying \OpenGL\ version, extensions and entry points.
 
 
 %-------------------------------------------------------------------------
@@ -2431,7 +2394,7 @@ An \OpenGL\ context must be created before this function can be called
 
 In addition to checking for \OpenGL\ extensions, \GLFW\ also checks for
 extensions in the operating system ``glue API'', such as WGL extensions
-under Windows and glX extensions under the X Window System.
+under Microsoft Windows and GLX extensions under the X Window System.
 \end{refnotes}
 
 
@@ -2452,8 +2415,8 @@ void * glfwGetProcAddress( const char *procname )
 \end{refparameters}
 
 \begin{refreturn}
-The function returns the pointer to the specified \OpenGL\ function if it
-is supported, otherwise NULL is returned.
+The function returns the address of the specified \OpenGL\ function, if it
+is available.  Otherwise NULL is returned.
 \end{refreturn}
 
 \begin{refdescription}
@@ -2499,10 +2462,10 @@ for the currently used \OpenGL\ implementation.
 
 \begin{refdescription}
 This function returns the \OpenGL\ implementation version. This is a
-convenient function that parses the version number information from the
-string returned by calling \texttt{glGetString(~GL\_VERSION~)}. The
-\OpenGL\ version information can be used to determine what functionality
-is supported by the used \OpenGL\ implementation.
+convenient function that parses the version number information at the beginning
+of the string returned by calling \texttt{glGetString(~GL\_VERSION~)}. The
+\OpenGL\ version information can be used to determine what functionality is
+supported by the used \OpenGL\ implementation.
 \end{refdescription}
 
 \begin{refnotes}
@@ -2518,7 +2481,7 @@ An \OpenGL\ context must be created before this function can be called
 A thread is a separate execution path within a process. All threads within
 a process share the same address space and resources. Threads execute in
 parallel, either virtually by means of time-sharing on a single processor,
-or truly in parallel on several processors. Even on a multi-processor
+or truly in parallel on multiple processors. Even on a multi-processor
 system, time-sharing is employed in order to maximize processor
 utilization and to ensure fair scheduling. \GLFW\ provides an operating
 system independent interface to thread management.
@@ -2989,11 +2952,12 @@ each feature.
 \bigskip\begin{mysamepage}\hypertarget{lnk:autopollevents}{}
 \textbf{GLFW\_AUTO\_POLL\_EVENTS}\\
 When GLFW\_AUTO\_POLL\_EVENTS is enabled, \textbf{glfwPollEvents} is
-automatically called each time that \textbf{glfwSwapBuffers} is called.
+automatically called each time that \textbf{glfwSwapBuffers} is called,
+immediately after the buffer swap itself.
 
 When GLFW\_AUTO\_POLL\_EVENTS is disabled, calling
 \textbf{glfwSwapBuffers} will not result in a call to
-\textbf{glfwPollEvents}. This can be useful if \textbf{glfwSwapBuffers}
+\textbf{glfwPollEvents}. This can be useful if for example \textbf{glfwSwapBuffers}
 needs to be called from within a callback function, since calling
 \textbf{glfwPollEvents} from a callback function is not allowed.
 \end{mysamepage}
@@ -3020,7 +2984,7 @@ the window.
 
 When GLFW\_MOUSE\_CURSOR is disabled, the mouse cursor is invisible, and
 mouse coordinates are not limited to the drawing area of the window. It is
-as if the mouse coordinates are recieved directly from the mouse, without
+as if the mouse coordinates are received directly from the mouse, without
 being restricted or manipulated by the windowing system.
 \end{mysamepage}
 
@@ -3067,8 +3031,8 @@ also clears the sticky information for all mouse buttons.
 \bigskip\begin{mysamepage}\hypertarget{lnk:systemkeys}{}
 \textbf{GLFW\_SYSTEM\_KEYS}\\
 When GLFW\_SYSTEM\_KEYS is enabled, pressing standard system key
-combinations, such as \texttt{ALT+TAB} under Windows, will give the normal
-behavior. Note that when \texttt{ALT+TAB} is issued under Windows in this
+combinations, such as \texttt{Alt+Tab} under Windows, will give the normal
+behavior. Note that when \texttt{Alt+Tab} is issued under Windows in this
 mode so that the \GLFW\ application is deselected when \GLFW\ is operating
 in fullscreen mode, the \GLFW\ application window will be minimized and
 the video mode will be set to the original desktop mode. When the \GLFW\
@@ -3104,7 +3068,7 @@ This function determines the number of active processors in the system.
 
 \begin{refnotes}
 Systems with several logical processors per physical processor, also
-known as SMT (Symmetric Multi Threading) processors, will report the
+known as SMT (Symmetric Multi-Threading) processors, will report the
 number of logical processors.
 \end{refnotes}
 
