--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -16,7 +16,7 @@
 \usepackage{times}
 
 % Logo macros
-\newcommand{\OpenGL}[1][0]{\textbf{OpenGL}\texttrademark}
+\newcommand{\OpenGL}[1][0]{OpenGL\texttrademark}
 \newcommand{\GLFW}[1][0]{\textbf{GLFW}}
 
 % Encoding
@@ -50,7 +50,8 @@
                             \vspace{0.5cm}{\LARGE\textbf{\glfwdoctype}}\\%
                             \vspace{0.8cm}{\large\textbf{API version \glfwapiver}}\\%
                             \textit{\today}\\%
-                            \vspace{1.5cm}\textbf{\textcopyright2002-2007 Camilla Berglund}\\%
+                            \vspace{1.5cm}\textbf{\textcopyright2002-2006 Marcus Geelnard}\\
+                                          \textbf{\textcopyright2006-2010 Camilla Berglund}\\%
                             \end{center}\end{titlepage}\newpage}
 
 % Colors
