Removed bolding for library name.

--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -17,7 +17,7 @@
 
 % Logo macros
 \newcommand{\OpenGL}[1][0]{OpenGL\texttrademark}
-\newcommand{\GLFW}[1][0]{\textbf{GLFW}}
+\newcommand{\GLFW}[1][0]{GLFW}
 
 % Encoding
 \usepackage[latin1]{inputenc}
